fixed meme text alignment, and also got the roundvote screens to set to waiting when the round ends

--- a/src/global_styles/_mixins.scss
+++ b/src/global_styles/_mixins.scss
@@ -54,8 +54,10 @@
     width: 100%;
     box-sizing: content-box;
     p{
+        display: flex;
+        align-items: center;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        display: inline;
+        // display: inline;
         color: white;
         font-size: 2.5rem * $sizeMult;
         width: 90%;
