--- a/src/index.css
+++ b/src/index.css
@@ -462,8 +462,9 @@ header {
   width: 100%;
   box-sizing: content-box; }
   .displayed-post-text p {
+    display: flex;
+    align-items: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    display: inline;
     color: white;
     font-size: 2.5rem;
     width: 90%;
@@ -549,8 +550,9 @@ header {
   box-sizing: content-box;
   padding: 5px; }
   .displayed-result-text p {
+    display: flex;
+    align-items: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    display: inline;
     color: white;
     font-size: 1.25rem;
     width: 90%;
@@ -727,8 +729,9 @@ header {
     width: 100%;
     box-sizing: content-box; }
     .intro-screen section p {
+      display: flex;
+      align-items: center;
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      display: inline;
       color: white;
       font-size: 3.75rem;
       width: 90%;
@@ -823,8 +826,9 @@ header {
   width: 100%;
   box-sizing: content-box; }
   .displayed-vote-text p {
+    display: flex;
+    align-items: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    display: inline;
     color: white;
     font-size: 1.25rem;
     width: 90%;
@@ -874,8 +878,9 @@ header {
     width: 100%;
     box-sizing: content-box; }
     .displayed-vote-text p {
+      display: flex;
+      align-items: center;
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      display: inline;
       color: white;
       font-size: 1.875rem;
       width: 90%;
@@ -921,8 +926,9 @@ header {
     width: 100%;
     box-sizing: content-box; }
     .displayed-vote-text p {
+      display: flex;
+      align-items: center;
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      display: inline;
       color: white;
       font-size: 1.65rem;
       width: 90%;
